--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,7 +1,8 @@
-<div class="quote">
-  <%= link_to quote.name, quote_path(quote) %>
-  <div class="quote__actions">
-    <%= button_to "Delete", quote_path(quote), method: :delete, class: "btn btn--light" %>
-    <%= link_to "Edit", edit_quote_path(quote), class: "btn btn--light" %>
-  </div>
-</div>
+<tr>
+  <th scope="row" class="text-center"><%= quote.id %></th>
+  <td class="text-center"><%= link_to quote.name, quote_path(quote), class: "btn btn--light text-primary" %></td>
+  <td class="d-flex justify-content-center text-center">
+    <%= link_to "Edit", edit_quote_path(quote), class: "btn btn--light text-primary" %>
+    <%= button_to "Delete", quote_path(quote), method: :delete, class: "btn btn--light text-danger" %>
+  </td>
+</tr>
