--- a/app/views/quotes/edit.html.erb
+++ b/app/views/quotes/edit.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container text-center mt-5">
   <%= link_to sanitize("&larr; Back to quote"), quote_path(@quote) %>
 
   <div class="header">
