--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,8 +1,19 @@
 <main class="container">
-  <div class="header">
+  <div class="text-center mt-5">
     <h1>Quotes</h1>
     <%= link_to "New quote", new_quote_path, class: "btn btn--primary" %>
   </div>
 
-  <%= render @quotes %>
+  <table class="table table-striped table-hover table-hove">
+    <thead>
+      <tr>
+        <th scope="col" class="text-center">#</th>
+        <th scope="col" class="text-center">Name</th>
+        <th scope="col" class="text-center">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render @quotes %>
+    </tbody>
+  </table>
 </main>
