--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container text-center mt-5">
   <%= link_to sanitize("&larr; Back to quotes"), quotes_path %>
 
   <div class="header">
