--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <%= render @quotes %>
+      <%= render 'quote', quotes: @quotes %>
     </tbody>
   </table>
 </main>
