--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,19 +1,23 @@
 <main class="container">
-  <div class="text-center mt-5">
-    <h1>Quotes</h1>
-    <%= link_to "New quote", new_quote_path, class: "btn btn--primary" %>
-  </div>
+  <%= turbo_frame_tag 'quote' do %>
+    <div class="text-center mt-5">
+      <h1>Quotes</h1>
+      <%= link_to "New quote", new_quote_path, class: "btn btn--primary", data: { turbo_frame: "second_frame" } %>
+    </div>
+  <% end %>
 
-  <table class="table table-striped table-hover table-hove">
-    <thead>
-      <tr>
-        <th scope="col" class="text-center">#</th>
-        <th scope="col" class="text-center">Name</th>
-        <th scope="col" class="text-center">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render 'quote', quotes: @quotes %>
-    </tbody>
-  </table>
+  <%= turbo_frame_tag "second_frame" do %>
+    <table class="table table-striped table-hover table-hove">
+      <thead>
+        <tr>
+          <th scope="col" class="text-center">#</th>
+          <th scope="col" class="text-center">Name</th>
+          <th scope="col" class="text-center">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+          <%= render 'quote', quotes: @quotes %>
+      </tbody>
+    </table>
+  <% end %>
 </main>
