--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -7,5 +7,6 @@
   <div class="d-flex justify-content-center">
     <%= f.text_field :name, class: 'form-control', input_html: { autofocus: false } %>
     <%= f.submit class: "btn btn-primary mx-2" %>
+    <%= link_to "Cancel", quotes_path, class: "btn btn--light" %>
   </div>
 <% end %>
