--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,23 +1,11 @@
 <main class="container">
-  <%= turbo_frame_tag 'quote' do %>
-    <div class="text-center mt-5">
-      <h1>Quotes</h1>
-      <%= link_to "New quote", new_quote_path, class: "btn btn--primary", data: { turbo_frame: "second_frame" } %>
-    </div>
-  <% end %>
+  <div class="text-center mt-5">
+    <h1>Quotes</h1>
+    <%= link_to "New quote", new_quote_path, class: "btn btn--primary", data: { turbo_frame: dom_id(Quote.new) } %>
+  </div>
 
-  <%= turbo_frame_tag "second_frame" do %>
-    <table class="table table-striped table-hover table-hove">
-      <thead>
-        <tr>
-          <th scope="col" class="text-center">#</th>
-          <th scope="col" class="text-center">Name</th>
-          <th scope="col" class="text-center">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-          <%= render 'quote', quotes: @quotes %>
-      </tbody>
-    </table>
+  <%= turbo_frame_tag Quote.new %>
+  <%= turbo_frame_tag 'quotes' do %>
+    <%= render 'quote', quotes: @quotes %>
   <% end %>
 </main>
