--- a/app/views/quotes/destroy.turbo_stream.erb
+++ b/app/views/quotes/destroy.turbo_stream.erb
@@ -1,1 +1,7 @@
 <%= turbo_stream.remove @quote %>
+
+<% unless current_company.quotes.exists? %>
+  <%= turbo_stream.update Quote.new do %>
+    <%= render "quotes/empty_state" %>
+  <% end %>
+<% end %>
